Projeto Alura/Gemini

--- a/index.html
+++ b/index.html
@@ -14,64 +14,10 @@
     </header>
     <main>
         <section>
-            <input type="text" placeholder="Digite sua busca">
-            <button>Pesquisar</button>
+            <input type="text" placeholder="Digite o nome do livro desejado" id="campo-pesquisa">
+            <button onclick="pesquisar()">Pesquisar</button>
         </section>
-        <section class="resultados-pesquisa">
-            <div class="item-resultado">
-                <h2>
-                    <a href="#" target="_blank">O ladrão de Raios</a>
-                </h2>
-                <p>Percy Jackson, um garoto com dificuldades de aprendizado, descobre ser um semideus, filho de
-                    Poseidon.
-                    Injustamente acusado de roubar o raio de Zeus, ele embarca em uma jornada épica ao lado de Annabeth
-                    e Grover para limpar
-                    seu nome e evitar uma guerra entre os deuses. Enfrentando monstros e desvendando mistérios, Percy
-                    precisa encontrar o
-                    raio perdido antes que seja tarde demais.</p>
-                <a href="https://acampamentomeiosangue.fandom.com/pt/wiki/O_Ladr%C3%A3o_de_Raios" target="_blank">Mais
-                    informações</a>
-            </div>
-            <div class="item-resultado">
-                <h2>
-                    <a href="#" target="_blank">O Mar de Monstros</a>
-                </h2>
-                <p>O acampamento meio-sangue é atacado por monstros marinhos. Percy Jackson,
-                    Annabeth Chase e Grover Underwood embarcam em uma perigosa missão para encontrar o Velocino de Ouro
-                    e salvar seu lar.</p>
-                <a href="https://acampamentomeiosangue.fandom.com/pt/wiki/O_Mar_de_Monstros" target="_blank">Mais
-                    informações</a>
-            </div>
-
-            <div class="item-resultado">
-                <h2>
-                    <a href="#" target="_blank">A Maldição do Titã</a>
-                </h2>
-                <p>Um antigo titã desperta e ameaça destruir o mundo. Percy e seus amigos
-                    devem encontrar o Titã Atlas e aprisioná-lo novamente antes que seja tarde demais.</p>
-                <a href="https://acampamentomeiosangue.fandom.com/pt/wiki/A_Maldi%C3%A7%A3o_do_Tit%C3%A3"
-                    target="_blank">Mais informações</a>
-            </div>
-
-            <div class="item-resultado">
-                <h2>
-                    <a href="#" target="_blank">A Batalha do Labirinto</a>
-                </h2>
-                <p>Um labirinto mortal se espalha pelo acampamento meio-sangue.
-                    Percy e seus amigos devem encontrar o centro do labirinto e impedir que Cronos escape.</p>
-                <a href="https://acampamentomeiosangue.fandom.com/pt/wiki/A_Batalha_do_Labirinto" target="_blank">Mais
-                    informações</a>
-            </div>
-
-            <div class="item-resultado">
-                <h2>
-                    <a href="#" target="_blank">O Último Olimpiano</a>
-                </h2>
-                <p>A guerra entre deuses e titãs está prestes a começar. Percy Jackson deve liderar os semideuses em uma
-                    batalha épica para salvar o mundo.</p>
-                <a href="https://acampamentomeiosangue.fandom.com/pt/wiki/O_Último_Olimpiano" target="_blank">Mais
-                    informações</a>
-            </div>
+        <section class="resultados-pesquisa" id="resultados-pesquisa">
         </section>
     </main>
     <footer>
